[package]
name = "standardform"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Aarav Shah <aaravaditya51@gmail.com>"]
description = "Effortlessly operate on numbers like 2e19 or 2*10^4 and more with this Rust implementation of standard form. Simplify, convert, and manipulate large numerical expressions with ease."
documentation = "https://docs.rs/standardform"
repository = "https://github.com/Deaths-Door/standardform-rs"
homepage = "https://github.com/Deaths-Door/standardform-rs"
license = "MIT OR Apache-2.0"

[features]
num = ["dep:num-traits"]

[dependencies]
thiserror = "1.0.48"


num-traits = { version = "0.2.16" , optional = true }